# KeyboardWarriors

./: Cargo.toml  LICENSE  README.md  audio_manager.go  game.go  go.mod  go.sum  index.html  main.go  note.go  run.sh  song.go  title_screen.go
audio/: song_template.json
songs/: happy_birthday.json  mary_had_a_little_lamb.json  ode_to_joy.json  simple_song.json  twinkle_star.json  twinkle_twinkle_little_star.json
src/: lib.rs  main.rs
src/audio/: mod.rs  sound_generation.rs
src/piano/: components.rs  mod.rs  setup.rs  systems.rs
