[package]
name = "KeyboardWarriors"
version = "0.1.0"
edition = "2021"
description = "A Keyboard Warriors game"

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking", "wayland"] }

[[bin]]
name = "keyboard_warriors"
path = "src/main.rs"

# Enable optimizations for dependencies in debug mode
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on the web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
